--- a/index.html
+++ b/index.html
@@ -2,10 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=index.php">
-    <title>Redirecting...</title>
+    <meta http-equiv="refresh" content="0;url=index.php">
+    <title>Redirecting to index.php</title>
+    <script type="text/javascript">
+        window.location.href = "index.php";
+    </script>
 </head>
 <body>
-    <p>If you are not redirected automatically, <a href="index.php">click here</a>.</p>
+    <!-- If you see this message, JavaScript is not enabled, and the redirection did not occur. -->
+    If you are not redirected automatically, please <a href="index.php">click here</a>.
 </body>
 </html>
